[package]
name = "balancing-playlist-spreader"
version = "0.1.0"
authors = ["peaceman <nixalio@gmail.com>"]
edition = "2018"


[lib]
name = "bps"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = { version = "2.1.1", features = ["serde"] }
hls_m3u8 = "0.4.0"
hmac = "0.9.0"
sha2 = "0.9.1"
hex = "0.4.2"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
reqwest = "0.10"
hyper = "0.13"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
rand = "0.7"
log = "0.4"
env_logger = "0.7"
humantime-serde = "1.0.0"
